--- a/projects/index.html
+++ b/projects/index.html
@@ -50,7 +50,7 @@
                 Project Central! All/Most/MaybeAFew of the projects i'm working on will be logged here.
 								i will try and keep detailed logs on what i'm working on, and keep them in order, but no promises.
             </p>
-
+			<p>--Ongoing projects are being logged at the <a href="https://relivesight.com/ongoing">Ongoing Projects Page</a></p>
             <p>
                 most of these are going to be incomplete, ugly, and dumb. but pr*ct*ce m*kes p*rfect amirite.
 								stars, too, have their own beginnings, but their own power results in their destruction.
