--- a/daily/test/testtwo/bruh.html
+++ b/daily/test/testtwo/bruh.html
@@ -3,28 +3,28 @@
       </head><body>
 <h1 style="margin-bottom:4px;">RE:LIVE</h1>
 <a>---------------</a>
-<a href="">Personal Info</a>
+<a href="">Personal Logs</a>
 <ul>
 <li><a href="">blog</a></li>
 <li><a href="">bio</a></li>
 <li><a href="">lists</a></li>
-<li><a href="">music</a></li>
+<li><a href="">video</a></li>
 </ul>
-<a href="">Reference Logs</a>
+<a href="https://relivesight.com/reference/">Reference Logs</a>
   <ul>
-  <li><a href="">sites</a></li>
-  <li><a href="">firmware</a></li>
-  <li><a href="">handwiring</a></li>
-  <li><a href="">flashing</a></li>
-  <li><a href="">wii softmod</a></li>
-  <li><a href="">encoding</a></li>
-  <li><a href="">ds3 randomizer</a></li>
+  <li><a href="https://relivesight.com/sites/">sites</a></li>
+  <li><a href="https://relivesight.com/reference/firmware/">firmware</a></li>
+  <li><a href="https://relivesight.com/reference/handwire/">handwiring</a></li>
+  <li><a href="https://relivesight.com/reference/flashing/">flashing</a></li>
+  <li><a href="https://relivesight.com/reference/wii/">wii softmod</a></li>
+  <li><a href="https://relivesight.com/reference/encoding/">encoding</a></li>
+  <li><a href="https://relivesight.com/reference/ds3mod/">ds3 randomizer</a></li>
   </ul>
 <a href="">Art Logs</a>
   <ul>
   <li><a href="https://relivesight.com/manga/">manga</a></li>
-  <li><a href="">my art</a></li>
-  <li><a href="">spam</a></li>
+  <li><a href="https://relivesight.com/art/">my art</a></li>
+  <li><a href="https://relivesight.com/spam/">spam</a></li>
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
@@ -41,8 +41,8 @@
 <li><a href="https://relivesight.com/projects/boxmiku/">box miku</a></li>
 <li><a href="https://relivesight.com/projects/wiitea/">wii tea</a></li>
 <li><a href="https://relivesight.com/projects/smore/">s'more</a></li>
-<li><a href="https://relivesight.com/projects/2b/">2b</a></li>
-<li><a href="https://relivesight.com/projects/9s/">9s</a></li>
+<li><a href="https://relivesight.com/projects/2b/">2b figurine</a></li>
+<li><a href="https://relivesight.com/projects/9s/">9s figurine</a></li>
 <li><a href="https://relivesight.com/projects/dactylknight/">dactyl knight</a></li>
 <li><a href="https://relivesight.com/projects/elytra/">elytra</a></li>
 <li><a href="https://relivesight.com/projects/quarandream/">quarandream</a></li>
