--- a/ongoing/index.html
+++ b/ongoing/index.html
@@ -41,13 +41,13 @@
     <div id="wrap">
 
         <div id="content_head">
-            <h1>Project Logs</h1>
+            <h1>Ongoing Projects</h1>
         </div>
 
 
         <div id="content">
             <p>
-                Anything i'm working on now is updated here as i have time! Thanks for checking it out!
+                Anything i'm working on now is updated here as i have time! Thanks for checking it out! (no pictures until completed)
             </p>
 			<p>--Finished projects are being logged at the <a href="https://relivesight.com/projects">Completed Projects Page</a></p>
             
@@ -62,27 +62,85 @@
 
 
 						<div id="content">
-							<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1tIqHrrI2PGF2jSGPR2ZV4GpkF_2ibrVp" style="width: 250px;"/>
-							<h3 style="float: right; right: 4px;">Karambit</h3>
-							<p>2 days</p>
+							<h3 style="float: right; right: 4px;">Game Dev</h3>
+							<p>-----</p>
 							<ol class="playlist_info">
 								<li class="rr">
-								i simply wanted to make a csgo knife prop, nothing more than that~ i learned about properly painting with acrylics, oops
+								inspired by games like gato robot, hollow knight, and celeste i have decided to embark on the journey of making a game.
+								this is my first time and will likely be quite awfully horrible, but follow along if you so desire!
 								</li>
-								<li class='rr'>Status: [Completed]</li>
 							</ol>
 							<div class="label">
-								<p><a href="/projects/karambit">Read More</a></p>
+								<p><a href="/projects/gamedev">Read More</a></p>
+							</div>
+						</div>						
+
+						<div id="content">
+							<h3 style="float: right; right: 4px;">433% Keyboard</h3>
+							<p>-----</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								the biggest keyboard undertaking i have ever attempted, 450 keys (technically) so im calling it a 433%.</li>
+							</ol>
+							<div class="label">
+								<p><a href="/projects/433">Read More</a></p>
+							</div>
+						</div>						
+
+						<div id="content">
+							<h3 style="float: right; right: 4px;">crnkbd</h3>
+							<p>-----</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								quite a poppin deal for hotswap pcbs, might be quite difficult to accurately put them together tho, we will see</li>
+							</ol>
+							<div class="label">
+								<p><a href="/projects/crnkbd">Read More</a></p>
+							</div>
+						</div>						
+
+
+						<div id="content">
+							<h3 style="float: right; right: 4px;">cyberdeck</h3>
+							<p>-----</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								who doesn't love cyberpunk tech, unfortunately you need skills to build it, ill get back to you on that...</li>
+							</ol>
+							<div class="label">
+								<p><a href="/projects/cyberdeck">Read More</a></p>
+							</div>
+						</div>						
+
+
+						<div id="content">
+							<h3 style="float: right; right: 4px;">manuform-002</h3>
+							<p>-----</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								the classic dactyl manuform with a wonderfully gel-ly wrist rest, not doing proper split cabling (yet)</li>
+							</ol>
+							<div class="label">
+								<p><a href="/projects/manuform-002">Read More</a></p>
+							</div>
+						</div>						
+
+
+						<div id="content">
+							<h3 style="float: right; right: 4px;">manuform-003</h3>
+							<p>-----</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								the classic dactyl manuform but with a twist, actually wiring the split cable (maybe???) </li>
+							</ol>
+							<div class="label">
+								<p><a href="/projects/manuform-003">Read More</a></p>
 							</div>
 						</div>						
 
 
 
 	
-									<div class="label">
-											<p><a href="/projects/placeholder">Look More</a></p>
-									</div>
-							</div>
         <div id="site_entry">
             <p>[ <a href="#">Back to Top</a> ]</p>
         </div>
