--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 	<h1 style="margin-bottom:30px;"><img src="images/home/title0000.png" alt="RE:LIVE" class="img-center img-title"></h1>
   <img src="images/nav/navig-main.png" class="naviBanners">
   <a href="/bio" class="navi"><img src="images/nav/flow.png">bio</a>
-  <a href="/daily" class="navi"><img src="images/nav/flow.png">blog</a>
+  <a href="/blog" class="navi"><img src="images/nav/flow.png">blog</a>
         <a href="/reference" class="navi"><img src="images/nav/flow.png">reference</a>
         <a href="/lists" class="navi"><img src="images/nav/flow.png">lists</a>
 
   <img src="images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
+  <a href="/ongoing" class="navi"><img src="images/nav/flow.png">ongoing</a>
     <a href="/projects" class="navi"><img src="images/nav/flow.png">projects</a>
     <a href="/randomlove" class="navi"><img src="images/nav/flow.png">random love</a>
     <a href="/studylogs" class="navi"><img src="images/nav/flow.png">studylogs</a>
