--- a/personal/index.html
+++ b/personal/index.html
@@ -111,7 +111,18 @@
         <br><br><h3>Code</h3>            <ol class="playlist_info">
             <li>beep boop computer program <</li><br>
         </ol>
-        <a href="/Code" class="label3">CLICK TO SEE SOME CODE</a>
+        <a href="/code" class="label3">CLICK TO SEE SOME CODE</a>
+
+
+    </div>
+
+    
+    <div id="ccontent">
+        <img class="auditorium" src="../images/img/1.png" style="width: 160px;"/>
+        <br><br><h3>Music</h3>            <ol class="playlist_info">
+            <li>alot of the musica i enjoy <</li><br>
+        </ol>
+        <a href="/music" class="label3">CLICK TO SEE SOME SONGS</a>
 
 
     </div>
