--- a/re/side.html
+++ b/re/side.html
@@ -10,6 +10,7 @@
 <li><a href="https://relivesight.com/lists/">lists</a></li>
 <li><a href="https://relivesight.com/video/">video</a></li>
 <li><a href="https://relivesight.com/code/">code</a></li>
+<li><a href="https://relivesight.com/music/">music</a></li>
 </ul>
 <a href="https://relivesight.com/reference/">Reference Logs</a>
   <ul>
