--- a/projects/433/index.html
+++ b/projects/433/index.html
@@ -15,7 +15,22 @@
     
       gtag('config', 'UA-123647555-2');
     </script>
+    <script src="../../re/w3.js"></script>
   </head><body>
+
+    <div class="row rowRowFightThePower">
+
+      <div class="harry">   
+      <div class="col-sm-12 col-md-4 contentLeft">     
+      <div w3-include-html="https://relivesight.com/re/side.html"></div>
+      <script>
+        w3.includeHTML();
+        </script>
+          </div>
+        </div>  
+      
+          <div class="col-sm-12 col-md-15 contentRight">
+
     <h2>Mikuyboard</h2>
     <p>—「0X://Explanation」<br>
     Honestly this is going to be quite a read, i went through alot getting this board to work. but it was all worth it for the miku-bombed keyboard of a lifetime. (that i will definitely use yes i still use non split keyboards...)
@@ -127,6 +142,7 @@ at this point i had a great time wasting an hour putting stickers on this board.
    <p>┈ ren ​♡</p>
 
 
+  </div></div>
   </body>
 
 </html>
