--- a/projects/2b/index.html
+++ b/projects/2b/index.html
@@ -15,7 +15,22 @@
     
       gtag('config', 'UA-123647555-2');
     </script>
-  </head><body>
+ <script src="../../re/w3.js"></script>
+</head><body>
+
+  <div class="row rowRowFightThePower">
+
+    <div class="harry">   
+    <div class="col-sm-12 col-md-4 contentLeft">     
+    <div w3-include-html="https://relivesight.com/re/side.html"></div>
+    <script>
+      w3.includeHTML();
+      </script>
+        </div>
+      </div>  
+    
+        <div class="col-sm-12 col-md-15 contentRight">
+
     <h2>YorHa No. 2 Type B</h2>
     <p>—「0X://Explanation」<br>
     A poorly painted 2b, don't look too close pls ​♡
@@ -67,6 +82,9 @@
    <p>┈ ren ​♡</p>
 
 
+
+  </div>
+</div>  
   </body>
 
 </html>
