--- a/projects/karambit/index.html
+++ b/projects/karambit/index.html
@@ -15,7 +15,23 @@
     
       gtag('config', 'UA-123647555-2');
     </script>
-  </head><body>
+ <script src="../../re/w3.js"></script>
+</head><body>
+
+  <div class="row rowRowFightThePower">
+
+    <div class="harry">   
+    <div class="col-sm-12 col-md-4 contentLeft">     
+    <div w3-include-html="https://relivesight.com/re/side.html"></div>
+    <script>
+      w3.includeHTML();
+      </script>
+        </div>
+      </div>  
+    
+        <div class="col-sm-12 col-md-15 contentRight">
+
+
     <h2>Karambit</h2>
     <p>—「0X://Explanation」<br>
     Twas about time i made a 𝖜 𝖊 𝖆 𝖕 𝖔 𝖓. so here it is, everyones favorite knife!- that originated from cs:go yes.
@@ -70,7 +86,8 @@
    <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
    <p>┈ ren ​♡</p>
 
-
+  </div>
+</div>  
   </body>
 
 </html>
