--- a/projects/rbsli/index.html
+++ b/projects/rbsli/index.html
@@ -15,7 +15,23 @@
     
       gtag('config', 'UA-123647555-2');
     </script>
-  </head><body>
+ <script src="../../re/w3.js"></script>
+</head><body>
+
+  <div class="row rowRowFightThePower">
+
+    <div class="harry">   
+    <div class="col-sm-12 col-md-4 contentLeft">     
+    <div w3-include-html="https://relivesight.com/re/side.html"></div>
+    <script>
+      w3.includeHTML();
+      </script>
+        </div>
+      </div>  
+    
+        <div class="col-sm-12 col-md-15 contentRight">
+
+
     <h2>R/B Sli</h2>
     <p>—「0X://Explanation」<br>
     Red and Blue - Looks alright
@@ -34,6 +50,8 @@
    <p>┈ ren ​♡</p>
 
 
+  </div>
+</div>  
   </body>
 
 </html>
