--- a/projects/boxmiku/index.html
+++ b/projects/boxmiku/index.html
@@ -15,7 +15,21 @@
     
       gtag('config', 'UA-123647555-2');
     </script>
-  </head><body>
+ <script src="../../re/w3.js"></script>
+</head><body>
+
+  <div class="row rowRowFightThePower">
+
+    <div class="harry">   
+    <div class="col-sm-12 col-md-4 contentLeft">     
+    <div w3-include-html="https://relivesight.com/re/side.html"></div>
+    <script>
+      w3.includeHTML();
+      </script>
+        </div>
+      </div>  
+    
+        <div class="col-sm-12 col-md-15 contentRight">
     <h2>Box Miku</h2>
     <p>—「0X://Explanation」<br>
     A poorly painted box miku, nothing more too it. Was quite hard getting good colors, and i forgot to take picture of the process oops.
@@ -54,6 +68,8 @@
    <p>┈ ren ​♡</p>
 
 
+  </div>
+</div>  
   </body>
 
 </html>
