bum bum da bum da bum

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -39,7 +39,7 @@
 
     
       <img src="../images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
-      <a href="/ongoing" class="navi"><img src="../images/nav/flow.png">projects</a>
+      <a href="/ongoing" class="navi"><img src="../images/nav/flow.png">ongoing</a>
         <a href="/projects" class="navi"><img src="../images/nav/flow.png">projects</a>
         <a href="/studylogs" class="navi"><img src="../images/nav/flow.png">studylogs</a>
         <a href="/code" class="navi"><img src="../images/nav/flow.png">code</a>
