all ongoing projects - updated!

--- a/re/side.html
+++ b/re/side.html
@@ -34,7 +34,8 @@
   <li><a href="https://relivesight.com/projects/crnkbd/">crnkbd</a></li>
   <li><a href="https://relivesight.com/projects/manuform-002/">manuform-002</a></li>
   <li><a href="https://relivesight.com/projects/manuform-003/">manuform-003</a></li>
-  <li><a href="https://relivesight.com/projects/cyberdeck/"><strike>cyberdeck</strike></a></li>
+  <li><a href="https://relivesight.com/projects/cyberdeck/">cyberdeck</a></li>
+  <li><a href="https://relivesight.com/projects/picam/">pi cam</a></li>
   </ul>
 
 <a href="https://relivesight.com/projects/">Completed Projects</a>
