--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <!--<p>feel free to leave a note in the guest-book while you're here!</p>-->
 <p>partially under construction right now! please mind any issues~</p>
 <p class="text-center">┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
-  <a href="/daily" class="navi" ><img src="images/nav/flow.png">most recently updated page: daily <img src="images/nav/flow.png"></a>
+  <a href="/projects/433" class="navi" ><img src="images/nav/flow.png">most recently updated page: 433% <img src="images/nav/flow.png"></a>
   ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
  
   <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
