--- a/projects/crnkbd/index.html
+++ b/projects/crnkbd/index.html
@@ -34,6 +34,7 @@
     <h2>Crnkbd</h2>
     <p>—「0X://Explanation」<br>
     a cheap hot swap thirty-some key diy board, this one is pretty and portable, plan on making two of em (yes i know its the crkbd but i spelled it wrong and im sticking with it)
+    all switches were lubed with krytox g0 502 way in the past so i forgot to mention it in the log.
     </p>
       <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
 
@@ -66,6 +67,24 @@
       <img src="https://drive.google.com/uc?export=view&id=13IakHeuh-l2hVtZtyHVBr0hUP_r8ow-q" width="500px">
       <p>bonus: behind the scenes on my <strike>"lovely"</strike> decent pictures. you dont need a good setup to take okay pics~</p>
       <img src="https://drive.google.com/uc?export=view&id=1wbM7ty3jLVpeilmNzvusOH1-smz9RFRW" width="500px">
+      
+      
+      <h1>Log 3: Where one ends another begins.</i></i></h1>
+
+      <p>so you know how i was not able to finish the other board completely cuz of the one damaged row? it turns out i just had to check continuity everywhere (thanks reddit for teaching me how to do that) and realize there arent any visible problems.
+        uh oh, that must mean there are some broken internals? or worse, cherry mx browns?! do not fret dear reader, nothing found was that awful. actually, it was the opposite of that, as i plugged it back in and now it worked completley~ now onto the next crnkbd:
+      </p>
+      <p>i bought two of the kits so i thought why not, and got to assembling (im not gunna repeat how the whole process goes, look up heh), so blah blah blah i solder solder solder and then i reach in the bag for the case,,, but i find... nothing.
+        surely i just misplaced it? after about the same amount of time it takes to decide your qmk layers, i couldn't find it and checked the order and sure enough i didnt order the plates. no worries! i have a quick fix:
+      </p>
+      <img src="https://drive.google.com/uc?export=view&id=1LtfjagVA51lnVvcDBBj_ZQu9m8bDxn8g" width="300px">
+      <img src="https://drive.google.com/uc?export=view&id=1JaDqiWlbxi1LAYn-lCwOOoAnM40oWo1e" width="300px">
+      <p>3d printing!!!! its a simple as that. now i had gmk 9009 norde kit sitting around so i thought :looksleft: maybe...</p>
+      <img src="https://drive.google.com/uc?export=view&id=1ANTdjxYPgF7GVyb8hoMpyPJzC-TZkLCB" width="500px">
+      <p>sweet, i like the look alot, better than the old cherry caps i tried first. but another problem, no case! alas three dimensional printing will come to the rescue yet again:</p>
+      <img src="https://drive.google.com/uc?export=view&id=1OwSypkgoFc1GO-qAEStk4YxC9JBEuHLq" width="300px">
+      <p>sadly i cannot conclude this with the placement of the case and some final photos, the screws are just a tad too small, so see you next time when my screws arrive! (im also having another software issue lol)</p>
+
       <br>
    <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
    <p>┈ ren ​♡</p>
