--- a/re/side.html
+++ b/re/side.html
@@ -36,7 +36,7 @@
   <li><a href="https://relivesight.com/projects/manuform-003/">manuform-003</a></li>
   <li><a href="https://relivesight.com/projects/cyberdeck/">cyberdeck</a></li>
   <li><a href="https://relivesight.com/projects/picam/">pi cam</a></li>
-  <li><a href="https://relivesight.com/projects/picam/"><strike>Omni-Imperium</strike></a></li>
+  <li><a href="https://relivesight.com/projects/Omni-Imperium/"><strike>Omni-Imperium</strike></a></li>
   </ul>
 
 <a href="https://relivesight.com/projects/">Completed Projects</a>
