wAke uP wIth no JuLioO jUliioOiIoIOOIiIo

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
   <img src="images/nav/navig-main.png" class="naviBanners">
   <a href="/bio" class="navi"><img src="images/nav/flow.png">bio</a>
   <a href="/blog" class="navi"><img src="images/nav/flow.png">blog</a>
+  <a href="/highlights" class="navi"><img src="images/nav/flow.png">highlights</a>
         <a href="/reference" class="navi"><img src="images/nav/flow.png">reference</a>
         <a href="/lists" class="navi"><img src="images/nav/flow.png">lists</a>
+        
 
   <img src="images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
   <a href="/ongoing" class="navi"><img src="images/nav/flow.png">ongoing</a>
@@ -69,19 +71,28 @@
 
 	<div class="col-sm-12">
       <h1>『Re Sight』</h1>
-      <p>no matter where you go, everyone's connected. welcome to my connection</p>
+      <p>no matter where you go, everyone's connected. welcome to my connection, please stop by the
+        <a href="/highlights/">hightlights</a> page if you are new!</p>
     </div>
     <div class="col-sm-12">
       <!--<h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>-->
       <img class="logo" style="width:500px;" src="images/home/tumble.png" />
 			<img class="logo" src="images/home/ddd.webp" />
       <div class="row imgPixel">
-<!--<p>feel free to leave a note in the guest-book while you're here!</p>-->
-<p>partially under construction right now! please mind any issues~</p>
+<!--<p>feel free to leave a note in the guest-book while you're here!</p>
+<p>partially under construction right now! please mind any issues~</p>-->
 <p class="text-center">┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
   <a href="/projects/433" class="navi" ><img src="images/nav/flow.png">most recently updated page: 433% <img src="images/nav/flow.png"></a>
   ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
  
+   
+  <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
+  <div class="col-sm-9 col-md-offset-1">
+    <h3 style="margin-bottom:10px;">9/16/20 </h3>
+    <p style="margin-bottom:30px;">★★★★☆ - Love - 298 yen</p>
+  </div>
+  
+
   <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
   <div class="col-sm-9 col-md-offset-1">
     <h3 style="margin-bottom:10px;">7/18/20 </h3>
