--- a/re/side.html
+++ b/re/side.html
@@ -7,6 +7,7 @@
 <ul>
 <li><a href="https://relivesight.com/blog/">blog</a></li>
 <li><a href="https://relivesight.com/bio/">bio</a></li>
+<li><a href="https://relivesight.com/highlights/">highlights</a></li>
 <li><a href="https://relivesight.com/lists/">lists</a></li>
 <li><a href="https://relivesight.com/video/">video</a></li>
 <li><a href="https://relivesight.com/code/">code</a></li>
@@ -36,7 +37,7 @@
   <li><a href="https://relivesight.com/projects/manuform-003/">manuform-003</a></li>
   <li><a href="https://relivesight.com/projects/cyberdeck/">cyberdeck</a></li>
   <li><a href="https://relivesight.com/projects/picam/">pi cam</a></li>
-  <li><a href="https://relivesight.com/projects/Omni-Imperium/"><strike>Omni-Imperium</strike></a></li>
+  <li><a href="https://relivesight.com/projects/Omni-Imperium/"><strike>omni-imperium</strike></a></li>
   </ul>
 
 <a href="https://relivesight.com/projects/">Completed Projects</a>
