--- a/lists/games/index.html
+++ b/lists/games/index.html
@@ -86,7 +86,7 @@
                <tr><td>Wii Sports Resort</td><td>Y</td><td>N</td><td>WII</td><td>Finished</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Wii Play</td><td>Y</td><td>N</td><td>WII</td><td>Finished</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Wii Party</td><td>Y</td><td>N</td><td>WII</td><td>Finished</td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td>Hollow Knight</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>Plan to</td><td>Speedrun, Glitch hunt</td></tr>
+               <tr><td>Hollow Knight</td><td>Y</td><td>N</td><td>PC</td><td>Finished (112%)</td><td>Plan to</td><td>Speedrun, Glitch hunt</td></tr>
                <tr><td>Rocket League </td><td>Y</td><td>N</td><td>PC</td><td>Online</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>NieR:Automata</td><td>Y</td><td>N</td><td>PC</td><td>Finished (100%)</td><td>Y</td><td>Get gud, Glitch hunt</td></tr>
                <tr><td>Terraria</td><td>Y</td><td>N</td><td>PC</td><td>Finished </td><td>Maybe</td><td>Speedrun, Glitch hunt</td></tr>
@@ -571,7 +571,7 @@
                <tr><td>Donkey Kong Country: Tropical Freeze</td><td>Y</td><td>N</td><td>Switch</td><td>Finished</td><td>N</td><td></td></tr>
                <tr><td>Crash Bandicoot 'N Sane Trilogy</td><td>Y</td><td>N</td><td>Switch</td><td>Finished</td><td>N</td><td></td></tr>
                <tr><td>Beatsaber</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td>my new "favorite" rythym game</td></tr>
-               <tr><td>Five Nights At Freddy's: Help Wanted</td><td>Y</td><td>N</td><td>PC</td><td>Quick</td><td>N</td><td>just a quick look for now, this game gives me nightmares</td></tr>
+               <tr><td>Five Nights At Freddy's: Help Wanted</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td>just a quick look for now, this game gives me nightmares</td></tr>
                <tr><td>SuperHot Mind Control Delete</td><td>Y</td><td>N</td><td>PC</td><td>Plan To</td><td>N</td><td></td></tr>
                <tr><td>Accounting+</td><td>Y</td><td>N</td><td>PC</td><td>Quick Look</td><td>N</td><td></td></tr>
                <tr><td>SteamVR</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td>is it a game?</td></tr>
@@ -584,6 +584,8 @@
                <tr><td>Sound Voltex III</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td>yes my pc is a real japanese arcade cabinet</td></tr>
                <tr><td>Kshootmania</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td>eeeeee ee e e </td></tr>
                <tr><td>Pikmin</td><td>N</td><td>Y</td><td>WII</td><td>Plan to</td><td>N</td><td></td></tr>
+               <tr><td>Super Mario Maker 2</td><td>N</td><td>Y</td><td>Switch</td><td>Quick look</td><td>N</td><td>60fps in 2d levels baby</td></tr>
+               <tr><td>Super Mario 3d All Stars</td><td>Y</td><td>N</td><td>Switch</td><td>Ongoing</td><td>Maybe</td><td>just a combo of 3 lovely dovely games</td></tr>
               </tbody></table>
 
 
