--- a/projects/433/index.html
+++ b/projects/433/index.html
@@ -38,6 +38,7 @@
 
             {and yes for anyone who is new, i know the images load slow, im using some jankery just bear with it plz and ty}
             </p>
+            <p><a target="_blank" href="https://www.reddit.com/r/MechanicalKeyboards/comments/it7a0p/i_present_my_433_ortho_endgame_is_only_a_lie_if/">reddit post</a> - thanks for 13.1k upvotes and 58 awards <3</p>
               <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
               <img src="https://drive.google.com/uc?export=view&id=1OKPmow5-rwRyFS-_zcOYHDpGRSjjKVej" width="500px">
         <p>Specs:</p>
