--- a/highlights/index.html
+++ b/highlights/index.html
@@ -57,6 +57,7 @@
           <li><a href="https://relivesight.com/projects/quarandream/">quarandream</a> - my favorite split keyboard ive made</li>
           <li><a href="https://relivesight.com/projects/video/">video</a> - a hub for all video projects ive done (not too many atm)</li>
           <li><a href="https://relivesight.com/projects/manga/">manga</a> - a hub for the one scanlation i've done</li>
+          <li><a href="https://relivesight.com/concept/book/">book</a> - 1 million 'words' honestly just so i can say im a published author</li>
           <li><a href="https://relivesight.com/concept/chat/">chat</a> - a hidden chat page to connect you to other re:live members anonymously / no one uses it</li>
         </ul><p>
    
