--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <a href="/manga" class="navi"><img src="images/nav/flow.png">manga</a>
     <a href="/art" class="navi"><img src="images/nav/flow.png">art</a>
     <a href="/video" class="navi"><img src="images/nav/flow.png">video</a>
+    <a href="/book" class="navi"><img src="images/nav/flow.png">book</a>
     <a href="/spam" class="navi"><img src="images/nav/flow.png">spam</a>
 
   <img src="images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
