--- a/highlights/index.html
+++ b/highlights/index.html
@@ -16,6 +16,13 @@
       gtag('config', 'UA-123647555-2');
     </script> 
     <script src="../re/w3.js"></script>
+    <style>
+      input[type=submit] {
+  margin:10px 0; // add top and bottom margin
+  background-color: #eeeeee;
+}
+
+    </style>
   </head><body>
 
     <div class="row rowRowFightThePower">
@@ -37,9 +44,9 @@
         the <strike>wonderful</strike> world of re:live sight~
         </p>
         <p><a id="back" href="https://relivesight.com/">back home</a></p>
-  
-  
-  
+       
+        <h1>Newsletter</h1>
+        <p> join the re:live sight mailing list! <a target="_blank" href="https://mailchi.mp/d99612d22ecc/relive-sight">click here~</a></p>  
         <h1>Top 10 Anime Descriptions</h1>
         <p>—「01://Who am I?」<br>
       i am ren rose, i have quite a few hobbies and if you wanna read more about me reference my <strike>cringe</strike> <a href="https://relivesight.com/bio">bio</a>.
