--- a/ongoing/index.html
+++ b/ongoing/index.html
@@ -59,7 +59,19 @@
 								</div>
 						</div>
 
-
+						<div id="content">
+							<h3 style="float: right; right: 4px;">Xbox One HOTAS</h3>
+							<p>-----</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								the loveely creation of u/moinen on reddit, xbox one compatible throttle and joystick with snap joints and relatively easy assembly.
+								a lovely project to print.
+								</li>
+							</ol>
+							<div class="label">
+								<p><a href="/projects/xbohotas">Read More</a></p>
+							</div>
+						</div>	
 
 						<div id="content">
 							<h3 style="float: right; right: 4px;">Game Dev</h3>
@@ -87,17 +99,7 @@
 							</div>
 						</div>						
 
-						<div id="content">
-							<h3 style="float: right; right: 4px;">crnkbd</h3>
-							<p>-----</p>
-							<ol class="playlist_info">
-								<li class="rr">
-								quite a poppin deal for hotswap pcbs, might be quite difficult to accurately put them together tho, we will see</li>
-							</ol>
-							<div class="label">
-								<p><a href="/projects/crnkbd">Read More</a></p>
-							</div>
-						</div>						
+											
 
 
 						<div id="content">
