--- a/projects/crnkbd/index.html
+++ b/projects/crnkbd/index.html
@@ -35,13 +35,11 @@
     <p>—「0X://Explanation」<br>
     a cheap hot swap thirty-some key diy board, this one is pretty and portable, plan on making two of em (yes i know its the crkbd but i spelled it wrong and im sticking with it)
     all switches were lubed with krytox g0 502 way in the past so i forgot to mention it in the log.
-    </p>
-      <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
-
-      <img src="" width="500px">
+    </p>     <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
+    <img src="https://drive.google.com/uc?export=view&id=1g3PEoCWMA-GP3Kj4Yp74U7mYLfeJSjDz" width="400px">
+ 
 
    
-
       <h1>Log 1: Smd Diodes???</h1>
       <p>i had sat down with all my materials all ready to build it, then i realized there weren't spots for normal diodes, i then ordered some smd diodes and they are now on their way.
         naked keeb: 
@@ -85,8 +83,12 @@
       <img src="https://drive.google.com/uc?export=view&id=1OwSypkgoFc1GO-qAEStk4YxC9JBEuHLq" width="300px">
       <p>sadly i cannot conclude this with the placement of the case and some final photos, the screws are just a tad too small, so see you next time when my screws arrive! (im also having another software issue lol)</p>
 
+      <h1>Log 4: Screws for you.</h1>
+      <p>i got the screws,, thanks unnamed mega corporation. added them and fixed the software issue! both are done now~
+      </p>
+      <img src="https://drive.google.com/uc?export=view&id=1g3PEoCWMA-GP3Kj4Yp74U7mYLfeJSjDz" width="500px">
       <br>
-   <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
+   <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
    <p>┈ ren ​♡</p>
 
 
