--- a/projects/index.html
+++ b/projects/index.html
@@ -65,7 +65,20 @@
 								</div>
 						</div>
 
-
+						<div id="content">
+							<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1AF5Jo86TZIiYPrhfXyKWmMlM0H8ux8M7" style="width: 250px;"/>
+							
+							<h3 style="float: right; right: 4px;">crnkbd</h3>
+							<p>4 days</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								quite a poppin deal for hotswap pcbs, 3d printed case for one, plates for the other, two in one, yet still awful picture..</li>
+							
+							<li class='rr'>Status: [Completed]</li></ol>
+							<div class="label">
+								<p><a href="/projects/crnkbd">Read More</a></p>
+							</div>
+						</div>
 
 						<div id="content">
 							<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1tIqHrrI2PGF2jSGPR2ZV4GpkF_2ibrVp" style="width: 250px;"/>
