--- a/ongoing/index.html
+++ b/ongoing/index.html
@@ -140,7 +140,16 @@
 							</div>
 						</div>						
 
-
+						<div id="content">
+							<h3 style="float: right; right: 4px;">pi cam</h3>
+							<p>-----</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								pi cam pi cam pi cam pi cam pi cam pi cam pi cam pi cam</ol>
+							<div class="label">
+								<p><a href="/projects/picam">Read More</a></p>
+							</div>
+						</div>		
 
 	
         <div id="site_entry">
