--- a/re/side.html
+++ b/re/side.html
@@ -31,6 +31,7 @@
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
+    <li><a href="https://relivesight.com/projects/xbohotas/">xbo hotas</a></li>
   <li><a href="https://relivesight.com/projects/gamedev/">game dev</a></li>
   <li><a href="https://relivesight.com/projects/433/">433% keyboard</a></li>
   <li><a href="https://relivesight.com/projects/manuform-002/">manuform-002</a></li>
