--- a/projects/index.html
+++ b/projects/index.html
@@ -65,6 +65,23 @@
 								</div>
 						</div>
 
+
+						<div id="content">
+							<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1IF6vSwyP2PEZLHTCW9SgxlIiSAFl4j9B" style="width: 250px;"/>
+							
+							<h3 style="float: right; right: 4px;">Xbox One HOTAS</h3>
+							<p>2 days</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								the loveely creation of u/moinen on reddit, xbox one compatible throttle and joystick with snap joints and easy assembly
+								</li>
+								<li class='rr'>Status: [Completed]</li></ol>
+							<div class="label">
+								<p><a href="/projects/xbohotas">Read More</a></p>
+							</div>
+						</div>	
+
+
 						<div id="content">
 							<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1AF5Jo86TZIiYPrhfXyKWmMlM0H8ux8M7" style="width: 250px;"/>
 							
