--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -269,6 +269,7 @@
          <tr><td>Avatar: The Last Airbender </td><td>Completed</td><td>61</td><td>(Not anime)</td><td>~</td></tr>
          <tr><td>My Next Life as a Villainess</td><td>Completed</td><td>12</td><td>Tv</td><td>5</td></tr>
          <tr><td>Avatar: Legend of Korra</td><td>Completed</td><td>52</td><td>(Not anime)</td><td>~</td></tr>
+         <tr><td>Fire Force</td><td>Watching</td><td>1</td><td>Tv</td><td>~</td></tr>
         </tbody></table>
 
 
