--- a/re/side.html
+++ b/re/side.html
@@ -31,10 +31,9 @@
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
+    <li><a href="https://relivesight.com/projects/3dmodel/">3d modelling</a></li>
   <li><a href="https://relivesight.com/projects/gamedev/">game dev</a></li>
   <li><a href="https://relivesight.com/projects/433/">433% keyboard</a></li>
-  <li><a href="https://relivesight.com/projects/manuform-002/">manuform-002</a></li>
-  <li><a href="https://relivesight.com/projects/manuform-003/">manuform-003</a></li>
   <li><a href="https://relivesight.com/projects/cyberdeck/">cyberdeck</a></li>
   <li><a href="https://relivesight.com/projects/picam/">pi cam</a></li>
   <li><a href="https://relivesight.com/projects/Omni-Imperium/"><strike>omni-imperium</strike></a></li>
@@ -42,8 +41,11 @@
 
 <a href="https://relivesight.com/projects/">Completed Projects</a>
 <ul>
+
   <li><a href="https://relivesight.com/projects/xbohotas/">xbo hotas</a></li>
   <li><a href="https://relivesight.com/projects/crnkbd/">crnkbd</a></li>
+  <li><a href="https://relivesight.com/projects/manuform-002/">manuform-002</a></li>
+  <li><a href="https://relivesight.com/projects/manuform-003/">manuform-003</a></li>
 <li><a href="https://relivesight.com/projects/karambit/">karambit</a></li>
 <li><a href="https://relivesight.com/projects/mikuyboard/">mikuyboard</a></li>
 <li><a href="https://relivesight.com/projects/boxmiku/">box miku</a></li>
