--- a/ongoing/index.html
+++ b/ongoing/index.html
@@ -59,6 +59,17 @@
 								</div>
 						</div>
 
+						<div id="content">
+							<h3 style="float: right; right: 4px;">3d Modelling</h3>
+							<p>-----</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								my quest to 3d model every object in existence, or more realistically: to get skills to model the pieces i need for all my other projects, should remain ongoing for a long time</ol>
+							<div class="label">
+								<p><a href="/projects/3dmodel">Read More</a></p>
+							</div>
+						</div>						
+
 						
 
 						<div id="content">
@@ -103,30 +114,7 @@
 						</div>						
 
 
-						<div id="content">
-							<h3 style="float: right; right: 4px;">manuform-002</h3>
-							<p>-----</p>
-							<ol class="playlist_info">
-								<li class="rr">
-								the classic dactyl manuform with a wonderfully gel-ly wrist rest, not doing proper split cabling (yet)</li>
-							</ol>
-							<div class="label">
-								<p><a href="/projects/manuform-002">Read More</a></p>
-							</div>
-						</div>						
-
-
-						<div id="content">
-							<h3 style="float: right; right: 4px;">manuform-003</h3>
-							<p>-----</p>
-							<ol class="playlist_info">
-								<li class="rr">
-								the classic dactyl manuform but with a twist, actually wiring the split cable (maybe???) </li>
-							</ol>
-							<div class="label">
-								<p><a href="/projects/manuform-003">Read More</a></p>
-							</div>
-						</div>						
+						
 
 						<div id="content">
 							<h3 style="float: right; right: 4px;">pi cam</h3>
