--- a/projects/3dmodel/index.html
+++ b/projects/3dmodel/index.html
@@ -43,8 +43,12 @@
         
             
               <h1>Log 1: Learning to Model: Or not.</h1>
-             <p>i have a bit (the tiniest bit) of experience in autodesk fusion 360, and this is my attempt without following any tutorials to design what i need. </p>
-
+             <p>i have a bit (the tiniest bit) of experience in autodesk fusion 360, and this is my attempt without following any tutorials to design what i need.
+                okay i just gave it a whirl, first attempt is this yes, made two sketches and shoved them together:</p>
+                <img src="https://drive.google.com/uc?export=view&id=1-ww8FHQJL7JLF3ixzJXYvZTSw7bDtAwk" width="500px">
+                <p>time for printing, lets see how it turns out! (fast forward an hour) and i couldnt get the tolerances right after a few tries, so im calling it quits for today, got other stuff to do. hopefully i
+                  watch tutorials lol~
+                </p>
 <br>
    <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
    <p>┈ ren ​♡</p>
