stuff and things

--- a/re/side.html
+++ b/re/side.html
@@ -33,15 +33,16 @@
   <ul>
     <li><a href="https://relivesight.com/projects/3dmodel/">3d modelling</a></li>
   <li><a href="https://relivesight.com/projects/gamedev/">game dev</a></li>
-  <li><a href="https://relivesight.com/projects/433/">433% keyboard</a></li>
   <li><a href="https://relivesight.com/projects/cyberdeck/">cyberdeck</a></li>
-  <li><a href="https://relivesight.com/projects/picam/">pi cam</a></li>
-  <li><a href="https://relivesight.com/projects/Omni-Imperium/"><strike>omni-imperium</strike></a></li>
+  <li><a href="https://relivesight.com/projects/potentials/">potentials</a></li>
   </ul>
 
 <a href="https://relivesight.com/projects/">Completed Projects</a>
 <ul>
-
+  <li><a href="https://relivesight.com/projects/tallcap/">tall cap</a></li>
+  <li><a href="https://relivesight.com/projects/allinone/">all in one</a></li>
+  <li><a href="https://relivesight.com/projects/arcade/">arcade cntrlr</a></li>
+  <li><a href="https://relivesight.com/projects/433/">433% keyboard</a></li>
   <li><a href="https://relivesight.com/projects/xbohotas/">xbo hotas</a></li>
   <li><a href="https://relivesight.com/projects/crnkbd/">crnkbd</a></li>
   <li><a href="https://relivesight.com/projects/manuform-002/">manuform-002</a></li>
