--- a/sites/index.html
+++ b/sites/index.html
@@ -64,6 +64,10 @@
       <br>
       <a target="_blank" href="https://bluemaxima.org/flashpoint/">/flashpoint/</a>
       - flash is going down forever, but the preservation effects of BlueMaxima are here to save the day! catch flashpoint with more than 52,000 games !  
+      <br> 
+      <br>
+      <a target="_blank" href="https://philosopher.life/">/⦗ℍ𝕪𝕡𝕖𝕣𝔱𝔢𝔵𝔱: h0p3⦘/</a>
+      - advance your mind with a look into another's. someone i've had the pleasure of speaking to myself!
       <br>
       <br>
       <a target="_blank" href="https://archive.org/">/the internet archive/</a>
